Fix breadcrumb spacing

--- a/src/styles/global/_breadcrumb.scss
+++ b/src/styles/global/_breadcrumb.scss
@@ -1,9 +1,11 @@
 .breadcrumb {
   z-index: 5;
   position: fixed;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 0;
+  right: 0;
   padding: 2rem;
+
+  margin: 1rem;
 
   border-radius: 0.5rem;
 
